# Autonomous-Vehicle-Simulation-Framework

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  requirements.txt  scenarios.py  vehicle.py
.github/workflows/: ci.yml
config/: settings.yaml
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: collision.rs  kinematics.rs  lib.rs  raycast.rs
src/: __init__.py  environment.py  main.py  scenarios.py  vehicle.py
tests/: test_environment.py  test_scenarios.py  test_vehicle.py
